--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 .lhover {
-  @apply py-2 px-4 rounded-md mx-5;
+  @apply py-2 px-1 sm:px-4 rounded-md mx-5;
 }
 .canon:hover {
   @apply bg-white text-red-700 font-bold transition-all duration-200;
@@ -30,7 +30,7 @@ body {
 }
 
 .input {
-  @apply my-1 w-[400px] p-1 outline-none border-gray-400 border-2 border-opacity-70;
+  @apply my-1 w-[300px] sm:w-[400px] p-1 outline-none border-gray-400 border-2 border-opacity-70;
 }
 
 .properties {
